{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Game",
            "id": "9066ce21-5ca0-4b1c-8fcf-d16d9c3f2234",
            "actions": [
                {
                    "name": "DragClick",
                    "type": "Value",
                    "id": "6924e6c8-ed15-418a-8425-66ae7d56cd12",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ZoomCamera",
                    "type": "PassThrough",
                    "id": "edcba1ec-3e7f-44c3-9745-2c883e4c1c2d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SeedSpecialAbility",
                    "type": "Button",
                    "id": "ba02aad8-959e-416e-bd4b-610f7f5c8a29",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "7979b24b-7769-4872-9bc2-3da4003dda05",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BackToLevelSelect",
                    "type": "Button",
                    "id": "b629356f-56b8-4453-92c0-b6859a17588c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "One Modifier",
                    "id": "6937e983-3826-4cad-95c2-6ec98fbee5ef",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DragClick",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "9c5907aa-cf08-463d-8eab-112bc23b83d2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DragClick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "a4767bb7-77f6-431a-8cb5-5828295d2abf",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DragClick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "bb300701-5df9-441e-ae76-cdf344f463d6",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DragClick",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "6564d74c-67d6-490b-b3bc-ceb39a5e2ddf",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DragClick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "12acb61c-42af-48b2-bd43-30584d682ab2",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DragClick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "feefc4dc-dd9a-425b-9fa3-7f0e62d3ac1c",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ac1cb6a1-eabe-4796-ad93-d66d64754fcc",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SeedSpecialAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85ece965-b250-4ddb-97f3-5242549b4b09",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cfabbd48-6014-4493-94f1-6c95b4b46fde",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BackToLevelSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debug",
            "id": "e392e4d2-dd0f-4b73-95e5-d6b9d6fa4d05",
            "actions": [
                {
                    "name": "destroyCurrentSeed",
                    "type": "Button",
                    "id": "92523e82-ad95-4db3-88e9-a88d656656e9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "be80042f-6070-47d9-9876-716e9895a842",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "destroyCurrentSeed",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}